[package]
name = "dear-imgui-rs-hello"
version = "0.0.0"
edition = "2018"
authors = ["The imgui-rs Developers", "Isaac Raway <github.com/airways>"]
description = "Examples for `imgui` crate (https://github.com/imgui-rs/imgui-rs) using Glium backend and Winit system"
homepage = "https://github.com/airways/imgui-rs-sample-app"
repository = "https://github.com/airways/imgui-rs-sample-app"
license = "MIT/Apache-2.0"
publish = false

[dependencies]
clipboard = "0.5"
glium = { version = "0.30", default-features = true }
image = "0.23"
imgui = { version = "0.8.2", features = ["tables-api"] }
imgui-glium-renderer = "0.8.2"
imgui-winit-support = "0.8.2"
